// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rich text renders with custom options 1`] = `
<div>
  <p>
    This is the homepage
  </p>
  <h1>
    Heading 1
  </h1>
  <h2>
    Heading 2
  </h2>
  <h3>
    Heading 3
  </h3>
  <h4>
    Heading 4
  </h4>
  <h5>
    Heading 5
  </h5>
  <h6>
    Heading 6
  </h6>
  <p>
    This is 
    <b>
      bold 
    </b>
    and 
    <i>
      italic
    </i>
     and 
    <i>
      <b>
        both
      </b>
    </i>
  </p>
  <ul>
    <li>
      <p>
        Very
      </p>
    </li>
    <li>
      <p>
        useful
      </p>
    </li>
    <li>
      <p>
        list
      </p>
    </li>
  </ul>
  <blockquote>
    <p>
      This is a quote
    </p>
  </blockquote>
  <h2>
    Reference tests:
  </h2>
  <p>
    Inline Link: 
    <span>
      Resolved inline Entry (
      7oHxo6bs0us9wIkq27qdyK
      )
    </span>
  </p>
  <p>
    Link in list:
  </p>
  <ol>
    <li>
      <p>
        <span>
          Resolved inline Entry (
          6KpLS2NZyB3KAvDzWf4Ukh
          )
        </span>
      </p>
    </li>
  </ol>
  <p>
    Embedded Entity:
  </p>
  <h2>
    Resolved embedded Entry: 
    Second Page
     (
    7oHxo6bs0us9wIkq27qdyK
    )
  </h2>
  <p />
  <h2>
    Embedded Asset:
  </h2>
  <h2>
    Resolved embedded Asset: 
    Contentful Logo
     (
    4ZQrqcrTunWiuNaavhGYNT
    )
  </h2>
  <p />
</div>
`;

exports[`rich text renders with default options 1`] = `
<div>
  <p>
    This is the homepage
  </p>
  <h1>
    Heading 1
  </h1>
  <h2>
    Heading 2
  </h2>
  <h3>
    Heading 3
  </h3>
  <h4>
    Heading 4
  </h4>
  <h5>
    Heading 5
  </h5>
  <h6>
    Heading 6
  </h6>
  <p>
    This is 
    <b>
      bold 
    </b>
    and 
    <i>
      italic
    </i>
     and 
    <i>
      <b>
        both
      </b>
    </i>
  </p>
  <ul>
    <li>
      <p>
        Very
      </p>
    </li>
    <li>
      <p>
        useful
      </p>
    </li>
    <li>
      <p>
        list
      </p>
    </li>
  </ul>
  <blockquote>
    <p>
      This is a quote
    </p>
  </blockquote>
  <h2>
    Reference tests:
  </h2>
  <p>
    Inline Link: 
    <span>
      type: 
      embedded-entry-inline
       id: 
      7oHxo6bs0us9wIkq27qdyK
    </span>
  </p>
  <p>
    Link in list:
  </p>
  <ol>
    <li>
      <p>
        <span>
          type: 
          embedded-entry-inline
           id: 
          6KpLS2NZyB3KAvDzWf4Ukh
        </span>
      </p>
    </li>
  </ol>
  <p>
    Embedded Entity:
  </p>
  <div />
  <p />
  <h2>
    Embedded Asset:
  </h2>
  <p />
</div>
`;
